# Utilities

./: readme.md
CMake ARM/: CMakeLists.txt  PreLoad.cmake  arm-none-eabi-gcc.cmake
Code Format/: c_style.astyle
OpenOCD/: openocd.cfg
VSCode/ARM Debug/: c_cpp_properties.json  launch.json  tasks.json
